deploy/example-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mando
  name: mando
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mando
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mando
    spec:
      containers:
      - image: downey/mando
        name: mando
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mando
  name: mando
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mando
  type: ClusterIP
